--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,7 +1,7 @@
 sphinx>=4.4.0
 myst-parser>=0.18
 sphinx-book-theme>=0.3.3
-sphinx-automodap>=0.14
+sphinx-automodapi>=0.14
 
 matplotlib>=3.0
 cycler>=0.11
