--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -16,5 +16,5 @@ python:
 
 sphinx:
   builder: dirhtml
-  configuration: docs/conf.py
+  configuration: docs/source/conf.py
   fail_on_warning: true
