changed sphinx builder to html

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,6 +15,6 @@ python:
       path: .
 
 sphinx:
-  builder: dirhtml
+  builder: html
   configuration: docs/source/conf.py
   fail_on_warning: true
